# souffle

./: .env.example  Cargo.toml
.github/workflows/: .gitlab-ci.yml  rust.yml
src/: main.rs  todo.txt
src/controllers/: default.rs  mod.rs  users.rs
src/controllers/authorization/: sign_in.rs  sign_up.rs
src/controllers/user/: search.rs
src/database/: database.rs  mod.rs
src/models/: user.rs
src/routes/: home.rs  mod.rs  user_api.rs
src/services/database/: authorization.rs  connection.rs  mod.rs  search.rs
