[package]
name = "souffle"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde ={version = "1.0.0", features = ["derive"]}
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"] 